add hm 4-8, scripts and javadoc